// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackMessage Component renders message 1`] = `
<DocumentFragment>
  <span
    class="feedbackMessage"
  >
    Feedback Message
  </span>
</DocumentFragment>
`;

exports[`FeedbackMessage Component renders message with extra content 1`] = `
<DocumentFragment>
  <span
    class="feedbackMessage"
  >
    Feedback Message
    <button
      class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
      type="button"
    >
      <div
        class="buttonText"
      >
        Button
      </div>
    </button>
  </span>
</DocumentFragment>
`;
